--- a/user.html
+++ b/user.html
@@ -31,7 +31,7 @@ require "authentication/adminauth.php";
                 <div class="vr"></div>
                 <li class="nav-link dropdown">
                     <a class="nav-item dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    <i class="bi bi-person-circle"></i> 
+                    <i class="bi bi-person-circle"></i> Admin
                     </a>
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
                         <li class="dropdown-header text-uppercase">Accounts</li>
