--- a/expenses.html
+++ b/expenses.html
@@ -1,6 +1,6 @@
-<?php
-require "authentication/adminauth.php";
-?>
+<!-- <?php
+require "authentication/userauth.php";
+?> -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -26,17 +26,17 @@ require "authentication/adminauth.php";
         <nav class="navbar-nav">
             <ul class="side-nav">
                 <li class="nav-link">
-                    <a class="nav-item position-relative" href="settings.php"><i class="bi bi-gear"></i></a>
+                    <a class="nav-item position-relative" href="settings.html"><i class="bi bi-gear"></i></a>
                 </li>
                 <div class="vr"></div>
                 <li class="nav-link dropdown">
                     <a class="nav-item dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    <i class="bi bi-person-circle"></i> <?php echo $username ?>
+                    <i class="bi bi-person-circle"></i> Admin
                     </a>
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
                         <li class="dropdown-header text-uppercase">Accounts</li>
                         <li class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="logout.php"><i class="bi bi-box-arrow-right"></i> Log Out</a></li>
+                        <li><a class="dropdown-item" href="logout.html"><i class="bi bi-box-arrow-right"></i> Log Out</a></li>
                     </ul>
                 </li>
             </ul>
@@ -49,90 +49,96 @@ require "authentication/adminauth.php";
                 <ul class="dropdown-menu dropdown-menu-lg dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
                     <li class="dropdown-header">Accounts</li>
                     <li class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="logout.php"><i class="bi bi-box-arrow-right"></i> Log Out</a></li>
+                    <li><a class="dropdown-item" href="logout.html"><i class="bi bi-box-arrow-right"></i> Log Out</a></li>
                 </ul>
             </li>
         </div>
     </header>
     <aside class="app-sidebar">
-        <ul class="sidebar">
+    <ul class="sidebar">
             <li class="side-title">UI Elements</li>
             <li class="side-link">
-                <a class="side-item" href="user.php"><i class="bi bi-person"></i> User</a>
+                <a class="side-item active" href="user.html"><i class="bi bi-person"></i> User</a>
             </li>
             <li class="side-link">
-                <a class="side-item" href="people.php"><i class="bi bi-people"></i> People</a>
+                <a class="side-item" href="people.html"><i class="bi bi-people"></i> People</a>
             </li>
             <li class="side-link">
-                <a class="side-item" href="product.php"><i class="bi bi-box2"></i> Product</a>
+                <a class="side-item" href="product.html"><i class="bi bi-box2"></i> Product</a>
             </li>
             <li class="side-link">
-                <a class="side-item" href="statementofaccount.php"><i class="bi bi-journals"></i> Statement of Account</a>
+                <a class="side-item active" href="order.html"><i class="bi bi-upc-scan"></i> Order</a>
+            </li>
+            <li class="side-link">
+                <a class="side-item" href="statementofaccount.html"><i class="bi bi-journals"></i> Statement of Account</a>
             </li>
             <li class="side-title">Reports</li>
             <li class="side-link">
-                <a class="side-item" href="inventory.php"><i class="bi bi-bar-chart-line"></i> Inventory</a>
+                <a class="side-item" href="expenses.html"><i class="bi bi-graph-up-arrow"></i> Expenses</a>
+            </li>
+            <li class="side-link">
+                <a class="side-item" href="liabilities.html"><i class="bi bi-credit-card"></i> Liabilities</a>
+            </li>
+            <li class="side-link">
+                <a class="side-item" href="inventory.html"><i class="bi bi-bar-chart-line"></i> Inventory</a>
             </li>
             <li class="side-footer">
-            <p class="mt-1">Alrights Reserve @ <?php echo date('Y'); ?> </p>
+            <p class="mt-1">Alrights Reserve </p>
             </li>
         </ul>
     </aside>
     <main class="app-main">
         <ul class="breadcrumb">
             <li><a href="#"><i class="bi bi-house-fill"></i></a></li>
-            <li><a href="#"><?php echo $username ?></a></li>
-            <li>Liabilities list</li>
+            <li><a href="#">Admin</a></li>
+            <li>Expenses Page</li>
         </ul>
         <div class="container-fluid mt-5">
             <div class="row">
-                <div class="col-sm-12 col-lg-12 mb-2">
-                    <div class="card">
+                <div class="col-sm-12 col-lg-12">
+                    <div class="card mb-3">
                         <div class="card-body">
-                            <h4 class="fw-bold text-uppercase m-auto"><span class="text-muted">liabilities</span> list</h4>
-                            <p>Back to <a href="settings.php">Settings</a></p>
+                            <form action="post" id="form-expenses">
+                                <div class="row">
+                                    <div class="col-sm-4 col-lg-4 mb-3">
+                                        <label class="form-label">Product Description</label>
+                                        <textarea type="text" class="form-control" id="txt-product-description"></textarea>
+                                    </div>
+                                    <div class="col-sm-2 col-lg-2 mb-3">
+                                        <label class="form-label">Amount of Purchase</label>
+                                        <input type="number" name="text" class="form-control" id="txt-product-amount">
+                                    </div>
+                                    <div class="col-sm-3 col-lg-3 mb-3">
+                                        <label class="form-label">Date :</label>
+                                        <div class="input-group">
+                                          <input type="date" class="form-control" disabled>
+                                          <span class="input-group-text"><i class="bi bi-calendar"></i></span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                        <div class="card-footer">
+                            <button type="button" class="btn btn-success btn-md" id="btn-product-add"><i class="bi bi-person-plus-fill"></i> Add</button>
+                            <button type="button" class="btn btn-success btn-md" id="btn-product-update">Update</button>
+                            <button type="button" class="btn btn-danger btn-md" id="btn-product-cancel"><i class="bi bi-person-x-fill"></i> Cancel</button>
                         </div>
                     </div>
-                </div>
-                <div class="col-sm-12 col-lg-12">
-                    <div class="card">
-                        <div class="card-body row">
-                            <div class="col-sm-6 col-lg-6 mb-3">
-                                <div class="table-responsive">
-                                    <table class="table table-bordered table-striped">
-                                        <thead class="table-dark">
-                                            <th>Name</th>
-                                            <th>Quantity</th>
-                                            <th>Subtotal</th>
-                                            <th class="text-center">Action</th>
-                                        </thead>
-                                        <tbody id="tbody-view-liability">
-                                            <tr>
-                                                <td colspan="4" class="text-center">no data found ...</td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
-                                </div>
-                            </div>
 
-                            <div class="col-sm-6 col-lg-6">
-                                <p>Customer: <span id="lbl-customer" class="text-uppercase"></span></p>
+                    <div class="card mb-3">
+                        <div class="card-body">
+                            <div class="card-body">
                                 <div class="table-responsive">
                                     <table class="table table-bordered">
-                                        <thead class="table-secondary">
-                                            <th>Product</th>
-                                            <th>Quantity</th>
-                                            <th>Amount</th>
+                                        <thead class="thead-dark">
+                                            <th>Description</th>
+                                            <th>Amount of Purhase</th>
+                                            <th>Date</th>
+                                            <th class="text-center">Action</th>
                                         </thead>
-                                        <tbody id="tbody-show-liability">
+                                        <tbody id="tbody-product">
                                             <tr>
-                                                <td colspan="3" class="text-center">no data found ... </td>
-                                            </tr>
-                                        </tbody>
-                                        <tbody>
-                                            <tr>
-                                                <td colspan="2" class="text-end text-white bg-secondary">Subtotal</td>
-                                                <td class="bg-success text-white" id="td-subtotal">.00</td>
+                                                <td colspan="3" class="text-center">no data records found ...</td>
                                             </tr>
                                         </tbody>
                                     </table>
@@ -147,20 +153,12 @@ require "authentication/adminauth.php";
 
 </body>
 <script src="js/app.js"></script>
+<script src="js/app/expenses.js"></script>
 <script src="js/sweetalert2.js"></script>
-<script src="js/app/settings.js"></script>
 <script src="js/jquery-slimscroll/jquery.slimscroll.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-<!-- Page level plugins -->
-<script src="vendor/datatables/jquery.dataTables.min.js"></script>
-<script src="vendor/datatables/dataTables.bootstrap4.min.js"></script>
-
-<!-- Page level custom scripts -->
-<script src="js/demo/datatables-demo.js"></script>
 <script type="text/javascript">
-$(document).ready(function(){
-
-$('.btn-toggle-show').on('click', function() {
+    $('.btn-toggle-show').on('click', function() {
         if(!$('body').hasClass('show')) {
             $('body').addClass('show');
 
@@ -179,18 +177,12 @@ $('.btn-toggle-show').on('click', function() {
         }
     });
 
-if( $('.sidebar').length > 0 ) {
+    if( $('.sidebar').length > 0 ) {
         $('.sidebar').slimScroll({
             height: '95%',
             wheelStep: 5,
         });
     }
 
-
-});
-var dropdownElementList = [].slice.call(document.querySelectorAll('.dropdown-toggle'))
-var dropdownList = dropdownElementList.map(function (dropdownToggleEl) {
-  return new bootstrap.Dropdown(dropdownToggleEl)
-})  
 </script>
 </html>
