--- a/product.html
+++ b/product.html
@@ -17,7 +17,7 @@ require "authentication/adminauth.php";
     <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Anton&family=Montserrat:wght@500&family=Passion+One:wght@900&display=swap" rel="stylesheet">
 </head>
 <body class="app-body">
-    <header class="app-header">
+<header class="app-header">
         <span class="app-brand">
             <a class="brand-first" href="#">a&m</a>
             <a class="brand-second" href="#">foodhauz</a>
@@ -91,25 +91,71 @@ require "authentication/adminauth.php";
         <ul class="breadcrumb">
             <li><a href="#"><i class="bi bi-house-fill"></i></a></li>
             <li><a href="#">Admin</a></li>
-            <li>User Page</li>
+            <li>Product Page</li>
         </ul>
         <div class="container-fluid mt-5">
             <div class="row">
-                <div class="col-sm-12 col-lg-12">
+                <div class="col-sm-4 col-lg-4 mb-2">
                     <div class="card">
                         <div class="card-body">
-                            <div class="table-responsive">
-                                <table class="table" id="dataTable">
+                            <h4 class="fw-bold text-uppercase"><span id="lbl-update-product" class="text-muted">Add New</span> Product</h4>
+                            <hr>
+                            <span class="text-center" id="message"></span>
+                            <form method="" action="" id="form-product">
+                                <div class="col-sm-12 col-lg-12 mb-2">
+                                    <label for="product" class="form-label">Product name:</label>
+                                    <input type="text" data-target="txt-poduct" name="txt-product" id="txt-product" class="form-control">
+                                </div>
+                                <div class="col-sm-12 col-lg-12 mb-2">
+                                    <label for="amount" class="form-label">Amount:</label>
+                                    <input type="number" data-target="txt-amount" name="txt-amount" id="txt-amount" class="form-control">
+                                </div>
+                                <div class="col-sm-12 col-lg-12 mb-2">
+                                    <label for="status" class="form-label">Categories:</label>
+                                    <select class="form-select" data-target="txt-status" name="txt-status" id="txt-categories">
+                                        <option value="Break Fast">Break Fast</option>
+                                        <option value="BBQ Grilled">BBQ Grilled</option>
+                                        <option value="Softdrinks">Softdrinks</option>
+                                    </select>
+                                </div>
+                                <div class="col-sm-12 col-lg-12 mb-2">
+                                    <label for="status" class="form-label">Status:</label>
+                                    <select class="form-select" data-target="txt-status" name="txt-status" id="txt-status" disabled>
+                                        <option value="Active">Active</option>
+                                        <option value="InActive">InActive</option>
+                                    </select>
+                                </div>
+                            </form>
+                        </div>
+                        <div class="card-footer">
+                            <button type="button" class="btn btn-success" id="btn-add-product"><i class="bi bi-plus-square"></i> Add Product</button>
+                            <button type="button" class="btn btn-success" id="btn-update-product"><i class="bi bi-check-square"></i> Update Product</button>
+                            <button type="button" class="btn btn-danger" id="btn-cancel-product"><i class="bi bi-dash-square"></i> Cancel</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-8 col-lg-8 mb-2">
+                    <div class="card">
+                        <!-- <div class="card-header">
+                            <strong><h4 class="text-muted">Product List</h4> </strong>
+                        </div> -->
+                        <div class="card-body">
+                            <h4 class="fw-bold text-uppercase"><span class="text-muted">Product </span>List</h4>
+                            <hr>
+                            <div class="table-responsive-sm">
+                                <table class="table table-bordered table-striped">
                                     <thead class="table-dark">
-                                        <th style="width:20em;">Fullname</th>
-                                        <th>Username</th>
-                                        <th>Password</th>
-                                        <th>Email</th>
-                                        <th class="text-center">UserType</th>
+                                        <th>Product</th>
+                                        <th>Amount</th>
+                                        <th>Categories</th>
+                                        <th>Status</th>
                                         <th class="text-center">Action</th>
                                     </thead>
-                                    <tbody id="tbody-generate-user">
-                                        
+                                    <tbody id="tbody-product">
+                                        <tr>
+                                            <td colspan="5">no data found ...</td>
+                                        </tr>
                                     </tbody>
                                 </table>
                             </div>
@@ -119,23 +165,14 @@ require "authentication/adminauth.php";
             </div>
         </div>
     </main>
-
 </body>
 <script src="js/app.js"></script>
+<script src="js/app/product.js"></script>
 <script src="js/sweetalert2.js"></script>
-<script src="js/app/users.js"></script>
 <script src="js/jquery-slimscroll/jquery.slimscroll.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-<!-- Page level plugins -->
-<script src="vendor/datatables/jquery.dataTables.min.js"></script>
-<script src="vendor/datatables/dataTables.bootstrap4.min.js"></script>
-
-<!-- Page level custom scripts -->
-<script src="js/demo/datatables-demo.js"></script>
 <script type="text/javascript">
-$(document).ready(function(){
-
-$('.btn-toggle-show').on('click', function() {
+    $('.btn-toggle-show').on('click', function() {
         if(!$('body').hasClass('show')) {
             $('body').addClass('show');
 
@@ -154,14 +191,12 @@ $('.btn-toggle-show').on('click', function() {
         }
     });
 
-if( $('.sidebar').length > 0 ) {
+    if( $('.sidebar').length > 0 ) {
         $('.sidebar').slimScroll({
             height: '95%',
             wheelStep: 5,
         });
     }
 
-
-});
 </script>
 </html>
