--- a/settings-liabilities.html
+++ b/settings-liabilities.html
@@ -1,6 +1,6 @@
-<?php
+<!-- <?php
 require "authentication/adminauth.php";
-?>
+?> -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -26,17 +26,17 @@ require "authentication/adminauth.php";
         <nav class="navbar-nav">
             <ul class="side-nav">
                 <li class="nav-link">
-                    <a class="nav-item position-relative" href="settings.php"><i class="bi bi-gear"></i></a>
+                    <a class="nav-item position-relative" href="settings.html"><i class="bi bi-gear"></i></a>
                 </li>
                 <div class="vr"></div>
                 <li class="nav-link dropdown">
                     <a class="nav-item dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    <i class="bi bi-person-circle"></i> <?php echo $username ?>
+                    <i class="bi bi-person-circle"></i> Admin
                     </a>
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
                         <li class="dropdown-header text-uppercase">Accounts</li>
                         <li class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="logout.php"><i class="bi bi-box-arrow-right"></i> Log Out</a></li>
+                        <li><a class="dropdown-item" href="logout.html"><i class="bi bi-box-arrow-right"></i> Log Out</a></li>
                     </ul>
                 </li>
             </ul>
@@ -49,71 +49,103 @@ require "authentication/adminauth.php";
                 <ul class="dropdown-menu dropdown-menu-lg dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
                     <li class="dropdown-header">Accounts</li>
                     <li class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="logout.php"><i class="bi bi-box-arrow-right"></i> Log Out</a></li>
+                    <li><a class="dropdown-item" href="logout.html"><i class="bi bi-box-arrow-right"></i> Log Out</a></li>
                 </ul>
             </li>
         </div>
     </header>
     <aside class="app-sidebar">
-        <ul class="sidebar">
+    <ul class="sidebar">
             <li class="side-title">UI Elements</li>
             <li class="side-link">
-                <a class="side-item" href="user.php"><i class="bi bi-person"></i> User</a>
+                <a class="side-item active" href="user.html"><i class="bi bi-person"></i> User</a>
             </li>
             <li class="side-link">
-                <a class="side-item" href="people.php"><i class="bi bi-people"></i> People</a>
+                <a class="side-item" href="people.html"><i class="bi bi-people"></i> People</a>
             </li>
             <li class="side-link">
-                <a class="side-item" href="product.php"><i class="bi bi-box2"></i> Product</a>
+                <a class="side-item" href="product.html"><i class="bi bi-box2"></i> Product</a>
             </li>
             <li class="side-link">
-                <a class="side-item" href="statementofaccount.php"><i class="bi bi-journals"></i> Statement of Account</a>
+                <a class="side-item active" href="order.html"><i class="bi bi-upc-scan"></i> Order</a>
+            </li>
+            <li class="side-link">
+                <a class="side-item" href="statementofaccount.html"><i class="bi bi-journals"></i> Statement of Account</a>
             </li>
             <li class="side-title">Reports</li>
             <li class="side-link">
-                <a class="side-item" href="inventory.php"><i class="bi bi-bar-chart-line"></i> Inventory</a>
+                <a class="side-item" href="expenses.html"><i class="bi bi-graph-up-arrow"></i> Expenses</a>
+            </li>
+            <li class="side-link">
+                <a class="side-item" href="liabilities.html"><i class="bi bi-credit-card"></i> Liabilities</a>
+            </li>
+            <li class="side-link">
+                <a class="side-item" href="inventory.html"><i class="bi bi-bar-chart-line"></i> Inventory</a>
             </li>
             <li class="side-footer">
-            <p class="mt-1">Alrights Reserve @ <?php echo date('Y'); ?> </p>
+            <p class="mt-1">Alrights Reserve </p>
             </li>
         </ul>
     </aside>
     <main class="app-main">
         <ul class="breadcrumb">
             <li><a href="#"><i class="bi bi-house-fill"></i></a></li>
-            <li><a href="#"><?php echo $username ?></a></li>
-            <li>People list</li>
+            <li><a href="#">Admin</a></li>
+            <li>Liabilities list</li>
         </ul>
         <div class="container-fluid mt-5">
             <div class="row">
                 <div class="col-sm-12 col-lg-12 mb-2">
                     <div class="card">
                         <div class="card-body">
-                            <h4 class="fw-bold text-uppercase m-auto"><span class="text-muted">people</span> list</h4>
+                            <h4 class="fw-bold text-uppercase m-auto"><span class="text-muted">liabilities</span> list</h4>
                             <p>Back to <a href="settings.php">Settings</a></p>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-12 col-lg-12">
                     <div class="card">
-                        <div class="card-body">
-                            <div class="table-responsive">
-                                <table class="table table-bordered table-striped table-hover">
-                                    <thead class="table-dark">
-                                        <th>Firstname</th>
-                                        <th>Middlename</th>
-                                        <th>Lastname</th>
-                                        <th>Contactno</th>
-                                        <th>Email</th>
-                                        <th>Address</th>
-                                        <th>Role</th>
-                                    </thead>
-                                    <tbody id="tbody-people-list">
-                                        <tr>
-                                            <td colspan="8" class="text-center">no data found ...</td>
-                                        </tr>
-                                    </tbody>
-                                </table>
+                        <div class="card-body row">
+                            <div class="col-sm-6 col-lg-6 mb-3">
+                                <div class="table-responsive">
+                                    <table class="table table-bordered table-striped">
+                                        <thead class="table-dark">
+                                            <th>Name</th>
+                                            <th>Quantity</th>
+                                            <th>Subtotal</th>
+                                            <th class="text-center">Action</th>
+                                        </thead>
+                                        <tbody id="tbody-view-liability">
+                                            <tr>
+                                                <td colspan="4" class="text-center">no data found ...</td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+
+                            <div class="col-sm-6 col-lg-6">
+                                <p>Customer: <span id="lbl-customer" class="text-uppercase"></span></p>
+                                <div class="table-responsive">
+                                    <table class="table table-bordered">
+                                        <thead class="table-secondary">
+                                            <th>Product</th>
+                                            <th>Quantity</th>
+                                            <th>Amount</th>
+                                        </thead>
+                                        <tbody id="tbody-show-liability">
+                                            <tr>
+                                                <td colspan="3" class="text-center">no data found ... </td>
+                                            </tr>
+                                        </tbody>
+                                        <tbody>
+                                            <tr>
+                                                <td colspan="2" class="text-end text-white bg-secondary">Subtotal</td>
+                                                <td class="bg-success text-white" id="td-subtotal">.00</td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
                             </div>
                         </div>
                     </div>
