--- a/settings-product.html
+++ b/settings-product.html
@@ -1,6 +1,6 @@
-<?php
+<!-- <?php
 require "authentication/adminauth.php";
-?>
+?> -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -26,17 +26,17 @@ require "authentication/adminauth.php";
         <nav class="navbar-nav">
             <ul class="side-nav">
                 <li class="nav-link">
-                    <a class="nav-item position-relative" href="settings.php"><i class="bi bi-gear"></i></a>
+                    <a class="nav-item position-relative" href="settings.html"><i class="bi bi-gear"></i></a>
                 </li>
                 <div class="vr"></div>
                 <li class="nav-link dropdown">
                     <a class="nav-item dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    <i class="bi bi-person-circle"></i> <?php echo $username ?>
+                    <i class="bi bi-person-circle"></i> Admin
                     </a>
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
                         <li class="dropdown-header text-uppercase">Accounts</li>
                         <li class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="logout.php"><i class="bi bi-box-arrow-right"></i> Log Out</a></li>
+                        <li><a class="dropdown-item" href="logout.html"><i class="bi bi-box-arrow-right"></i> Log Out</a></li>
                     </ul>
                 </li>
             </ul>
@@ -49,7 +49,7 @@ require "authentication/adminauth.php";
                 <ul class="dropdown-menu dropdown-menu-lg dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
                     <li class="dropdown-header">Accounts</li>
                     <li class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="logout.php"><i class="bi bi-box-arrow-right"></i> Log Out</a></li>
+                    <li><a class="dropdown-item" href="logout.html"><i class="bi bi-box-arrow-right"></i> Log Out</a></li>
                 </ul>
             </li>
         </div>
@@ -58,95 +58,65 @@ require "authentication/adminauth.php";
     <ul class="sidebar">
             <li class="side-title">UI Elements</li>
             <li class="side-link">
-                <a class="side-item" href="user.php"><i class="bi bi-person"></i> User</a>
+                <a class="side-item active" href="user.html"><i class="bi bi-person"></i> User</a>
             </li>
             <li class="side-link">
-                <a class="side-item" href="people.php"><i class="bi bi-people"></i> People</a>
+                <a class="side-item" href="people.html"><i class="bi bi-people"></i> People</a>
             </li>
             <li class="side-link">
-                <a class="side-item active" href="product.php"><i class="bi bi-box2"></i> Product</a>
+                <a class="side-item" href="product.html"><i class="bi bi-box2"></i> Product</a>
             </li>
             <li class="side-link">
-                <a class="side-item" href="statementofaccount.php"><i class="bi bi-journals"></i> Statement of Account</a>
+                <a class="side-item active" href="order.html"><i class="bi bi-upc-scan"></i> Order</a>
+            </li>
+            <li class="side-link">
+                <a class="side-item" href="statementofaccount.html"><i class="bi bi-journals"></i> Statement of Account</a>
             </li>
             <li class="side-title">Reports</li>
             <li class="side-link">
-                <a class="side-item" href="inventory.php"><i class="bi bi-bar-chart-line"></i> Inventory</a>
+                <a class="side-item" href="expenses.html"><i class="bi bi-graph-up-arrow"></i> Expenses</a>
+            </li>
+            <li class="side-link">
+                <a class="side-item" href="liabilities.html"><i class="bi bi-credit-card"></i> Liabilities</a>
+            </li>
+            <li class="side-link">
+                <a class="side-item" href="inventory.html"><i class="bi bi-bar-chart-line"></i> Inventory</a>
             </li>
             <li class="side-footer">
-            <p class="mt-1">Alrights Reserve @ <?php echo date('Y'); ?> </p>
+            <p class="mt-1">Alrights Reserve </p>
             </li>
         </ul>
     </aside>
-
     <main class="app-main">
         <ul class="breadcrumb">
             <li><a href="#"><i class="bi bi-house-fill"></i></a></li>
-            <li><a href="#"><?php echo $username ?></a></li>
-            <li>Product Page</li>
+            <li><a href="#">Admin</a></li>
+            <li>Product list</li>
         </ul>
         <div class="container-fluid mt-5">
             <div class="row">
-                <div class="col-sm-4 col-lg-4 mb-2">
+                <div class="col-sm-12 col-lg-12 mb-2">
                     <div class="card">
                         <div class="card-body">
-                            <h4 class="fw-bold text-uppercase"><span id="lbl-update-product" class="text-muted">Add New</span> Product</h4>
-                            <hr>
-                            <span class="text-center" id="message"></span>
-                            <form method="" action="" id="form-product">
-                                <div class="col-sm-12 col-lg-12 mb-2">
-                                    <label for="product" class="form-label">Product name:</label>
-                                    <input type="text" data-target="txt-poduct" name="txt-product" id="txt-product" class="form-control">
-                                </div>
-                                <div class="col-sm-12 col-lg-12 mb-2">
-                                    <label for="amount" class="form-label">Amount:</label>
-                                    <input type="number" data-target="txt-amount" name="txt-amount" id="txt-amount" class="form-control">
-                                </div>
-                                <div class="col-sm-12 col-lg-12 mb-2">
-                                    <label for="status" class="form-label">Categories:</label>
-                                    <select class="form-select" data-target="txt-status" name="txt-status" id="txt-categories">
-                                        <option value="Break Fast">Break Fast</option>
-                                        <option value="BBQ Grilled">BBQ Grilled</option>
-                                        <option value="Softdrinks">Softdrinks</option>
-                                    </select>
-                                </div>
-                                <div class="col-sm-12 col-lg-12 mb-2">
-                                    <label for="status" class="form-label">Status:</label>
-                                    <select class="form-select" data-target="txt-status" name="txt-status" id="txt-status" disabled>
-                                        <option value="Active">Active</option>
-                                        <option value="InActive">InActive</option>
-                                    </select>
-                                </div>
-                            </form>
-                        </div>
-                        <div class="card-footer">
-                            <button type="button" class="btn btn-success" id="btn-add-product"><i class="bi bi-plus-square"></i> Add Product</button>
-                            <button type="button" class="btn btn-success" id="btn-update-product"><i class="bi bi-check-square"></i> Update Product</button>
-                            <button type="button" class="btn btn-danger" id="btn-cancel-product"><i class="bi bi-dash-square"></i> Cancel</button>
+                            <h4 class="fw-bold text-uppercase m-auto"><span class="text-muted">product</span> list</h4>
+                            <p>Back to <a href="settings.php">Settings</a></p>
                         </div>
                     </div>
                 </div>
-
-                <div class="col-sm-8 col-lg-8 mb-2">
+                <div class="col-sm-12 col-lg-12">
                     <div class="card">
-                        <!-- <div class="card-header">
-                            <strong><h4 class="text-muted">Product List</h4> </strong>
-                        </div> -->
                         <div class="card-body">
-                            <h4 class="fw-bold text-uppercase"><span class="text-muted">Product </span>List</h4>
-                            <hr>
-                            <div class="table-responsive-sm">
-                                <table class="table table-bordered table-striped">
+                            <div class="table-responsive">
+                                <table class="table table-bordered table-hover">
                                     <thead class="table-dark">
                                         <th>Product</th>
                                         <th>Amount</th>
                                         <th>Categories</th>
-                                        <th>Status</th>
-                                        <th class="text-center">Action</th>
+                                        <th class="text-center">Status</th>
                                     </thead>
-                                    <tbody id="tbody-product">
+                                    <tbody id="tbody-product-list">
                                         <tr>
-                                            <td colspan="5">no data found ...</td>
+                                            <td colspan="4" class="text-center">no data found ...</td>
                                         </tr>
                                     </tbody>
                                 </table>
@@ -157,14 +127,23 @@ require "authentication/adminauth.php";
             </div>
         </div>
     </main>
+
 </body>
 <script src="js/app.js"></script>
-<script src="js/app/product.js"></script>
 <script src="js/sweetalert2.js"></script>
+<script src="js/app/settings.js"></script>
 <script src="js/jquery-slimscroll/jquery.slimscroll.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<!-- Page level plugins -->
+<script src="vendor/datatables/jquery.dataTables.min.js"></script>
+<script src="vendor/datatables/dataTables.bootstrap4.min.js"></script>
+
+<!-- Page level custom scripts -->
+<script src="js/demo/datatables-demo.js"></script>
 <script type="text/javascript">
-    $('.btn-toggle-show').on('click', function() {
+$(document).ready(function(){
+
+$('.btn-toggle-show').on('click', function() {
         if(!$('body').hasClass('show')) {
             $('body').addClass('show');
 
@@ -183,12 +162,18 @@ require "authentication/adminauth.php";
         }
     });
 
-    if( $('.sidebar').length > 0 ) {
+if( $('.sidebar').length > 0 ) {
         $('.sidebar').slimScroll({
             height: '95%',
             wheelStep: 5,
         });
     }
 
+
+});
+var dropdownElementList = [].slice.call(document.querySelectorAll('.dropdown-toggle'))
+var dropdownList = dropdownElementList.map(function (dropdownToggleEl) {
+  return new bootstrap.Dropdown(dropdownToggleEl)
+})  
 </script>
 </html>
