--- a/settings.html
+++ b/settings.html
@@ -17,7 +17,7 @@ require "authentication/adminauth.php";
     <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Anton&family=Montserrat:wght@500&family=Passion+One:wght@900&display=swap" rel="stylesheet">
 </head>
 <body class="app-body">
-<header class="app-header">
+    <header class="app-header">
         <span class="app-brand">
             <a class="brand-first" href="#">a&m</a>
             <a class="brand-second" href="#">foodhauz</a>
@@ -26,17 +26,17 @@ require "authentication/adminauth.php";
         <nav class="navbar-nav">
             <ul class="side-nav">
                 <li class="nav-link">
-                    <a class="nav-item position-relative" href="settings.php"><i class="bi bi-gear"></i></a>
+                    <a class="nav-item position-relative" href="settings.html"><i class="bi bi-gear"></i></a>
                 </li>
                 <div class="vr"></div>
                 <li class="nav-link dropdown">
                     <a class="nav-item dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    <i class="bi bi-person-circle"></i> <?php echo $username ?>
+                    <i class="bi bi-person-circle"></i> Admin
                     </a>
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
                         <li class="dropdown-header text-uppercase">Accounts</li>
                         <li class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="logout.php"><i class="bi bi-box-arrow-right"></i> Log Out</a></li>
+                        <li><a class="dropdown-item" href="logout.html"><i class="bi bi-box-arrow-right"></i> Log Out</a></li>
                     </ul>
                 </li>
             </ul>
@@ -49,69 +49,71 @@ require "authentication/adminauth.php";
                 <ul class="dropdown-menu dropdown-menu-lg dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
                     <li class="dropdown-header">Accounts</li>
                     <li class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="logout.php"><i class="bi bi-box-arrow-right"></i> Log Out</a></li>
+                    <li><a class="dropdown-item" href="logout.html"><i class="bi bi-box-arrow-right"></i> Log Out</a></li>
                 </ul>
             </li>
         </div>
     </header>
     <aside class="app-sidebar">
-        <ul class="sidebar">
+    <ul class="sidebar">
             <li class="side-title">UI Elements</li>
             <li class="side-link">
-                <a class="side-item" href="user.php"><i class="bi bi-person"></i> User</a>
+                <a class="side-item active" href="user.html"><i class="bi bi-person"></i> User</a>
             </li>
             <li class="side-link">
-                <a class="side-item" href="people.php"><i class="bi bi-people"></i> People</a>
+                <a class="side-item" href="people.html"><i class="bi bi-people"></i> People</a>
             </li>
             <li class="side-link">
-                <a class="side-item" href="product.php"><i class="bi bi-box2"></i> Product</a>
+                <a class="side-item" href="product.html"><i class="bi bi-box2"></i> Product</a>
             </li>
             <li class="side-link">
-                <a class="side-item" href="statementofaccount.php"><i class="bi bi-journals"></i> Statement of Account</a>
+                <a class="side-item active" href="order.html"><i class="bi bi-upc-scan"></i> Order</a>
+            </li>
+            <li class="side-link">
+                <a class="side-item" href="statementofaccount.html"><i class="bi bi-journals"></i> Statement of Account</a>
             </li>
             <li class="side-title">Reports</li>
             <li class="side-link">
-                <a class="side-item" href="inventory.php"><i class="bi bi-bar-chart-line"></i> Inventory</a>
+                <a class="side-item" href="expenses.html"><i class="bi bi-graph-up-arrow"></i> Expenses</a>
+            </li>
+            <li class="side-link">
+                <a class="side-item" href="liabilities.html"><i class="bi bi-credit-card"></i> Liabilities</a>
+            </li>
+            <li class="side-link">
+                <a class="side-item" href="inventory.html"><i class="bi bi-bar-chart-line"></i> Inventory</a>
             </li>
             <li class="side-footer">
-            <p class="mt-1">Alrights Reserve @ <?php echo date('Y'); ?> </p>
+            <p class="mt-1">Alrights Reserve </p>
             </li>
         </ul>
     </aside>
     <main class="app-main">
         <ul class="breadcrumb">
             <li><a href="#"><i class="bi bi-house-fill"></i></a></li>
-            <li><a href="#"><?php echo $username ?></a></li>
-            <li>Product list</li>
+            <li><a href="#">Admin</a></li>
+            <li>All Settings</li>
         </ul>
         <div class="container-fluid mt-5">
             <div class="row">
-                <div class="col-sm-12 col-lg-12 mb-2">
-                    <div class="card">
+                <div class="col-sm-12 col-lg-12">
+                    <div class="card mb-2">
                         <div class="card-body">
-                            <h4 class="fw-bold text-uppercase m-auto"><span class="text-muted">product</span> list</h4>
-                            <p>Back to <a href="settings.php">Settings</a></p>
+                            <a href="settings-product.php"><h4 class="fw-bold text-uppercase text-muted">product</h4></a>
                         </div>
                     </div>
-                </div>
-                <div class="col-sm-12 col-lg-12">
-                    <div class="card">
+                    <div class="card mb-2">
                         <div class="card-body">
-                            <div class="table-responsive">
-                                <table class="table table-bordered table-hover">
-                                    <thead class="table-dark">
-                                        <th>Product</th>
-                                        <th>Amount</th>
-                                        <th>Categories</th>
-                                        <th class="text-center">Status</th>
-                                    </thead>
-                                    <tbody id="tbody-product-list">
-                                        <tr>
-                                            <td colspan="4" class="text-center">no data found ...</td>
-                                        </tr>
-                                    </tbody>
-                                </table>
-                            </div>
+                            <a href="settings-people.php"><h4 class="fw-bold text-uppercase text-muted">people</h4></a>
+                        </div>
+                    </div>
+                    <div class="card mb-2">
+                        <div class="card-body">
+                            <a href="settings-expenses.php"><h4 class="fw-bold text-uppercase text-muted">expenses</h4></a>
+                        </div>
+                    </div>
+                    <div class="card mb-2">
+                        <div class="card-body">
+                            <a href="settings-liabilities.php"><h4 class="fw-bold text-uppercase text-muted">liabilities</h4></a>
                         </div>
                     </div>
                 </div>
@@ -122,7 +124,7 @@ require "authentication/adminauth.php";
 </body>
 <script src="js/app.js"></script>
 <script src="js/sweetalert2.js"></script>
-<script src="js/app/settings.js"></script>
+<script src="js/app/users.js"></script>
 <script src="js/jquery-slimscroll/jquery.slimscroll.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <!-- Page level plugins -->
