--- a/expenses.html
+++ b/expenses.html
@@ -58,7 +58,7 @@ require "authentication/userauth.php";
     <ul class="sidebar">
             <li class="side-title">UI Elements</li>
             <li class="side-link">
-                <a class="side-item active" href="user.html"><i class="bi bi-person"></i> User</a>
+                <a class="side-item" href="user.html"><i class="bi bi-person"></i> User</a>
             </li>
             <li class="side-link">
                 <a class="side-item" href="people.html"><i class="bi bi-people"></i> People</a>
@@ -74,7 +74,7 @@ require "authentication/userauth.php";
             </li>
             <li class="side-title">Reports</li>
             <li class="side-link">
-                <a class="side-item" href="expenses.html"><i class="bi bi-graph-up-arrow"></i> Expenses</a>
+                <a class="side-item active" href="expenses.html"><i class="bi bi-graph-up-arrow"></i> Expenses</a>
             </li>
             <li class="side-link">
                 <a class="side-item" href="liabilities.html"><i class="bi bi-credit-card"></i> Liabilities</a>
