--- a/order.html
+++ b/order.html
@@ -59,7 +59,7 @@ require "authentication/userauth.php";
     <ul class="sidebar">
             <li class="side-title">UI Elements</li>
             <li class="side-link">
-                <a class="side-item active" href="user.html"><i class="bi bi-person"></i> User</a>
+                <a class="side-item" href="user.html"><i class="bi bi-person"></i> User</a>
             </li>
             <li class="side-link">
                 <a class="side-item" href="people.html"><i class="bi bi-people"></i> People</a>
@@ -167,7 +167,9 @@ require "authentication/userauth.php";
                                                 <th class="text-center">Action</th>
                                             </thead>
                                             <tbody id="tbody-order">
-                                            
+                                                <tr>
+                                                    <td colspan="5" class="text-center">no data found</td>
+                                                </tr>
                                             </tbody>
                                         </table>
                                         <table class="table table-bordered table-sm">
