--- a/user.html
+++ b/user.html
@@ -67,7 +67,7 @@ require "authentication/adminauth.php";
                 <a class="side-item" href="product.html"><i class="bi bi-box2"></i> Product</a>
             </li>
             <li class="side-link">
-                <a class="side-item active" href="order.html"><i class="bi bi-upc-scan"></i> Order</a>
+                <a class="side-item" href="order.html"><i class="bi bi-upc-scan"></i> Order</a>
             </li>
             <li class="side-link">
                 <a class="side-item" href="statementofaccount.html"><i class="bi bi-journals"></i> Statement of Account</a>
@@ -109,7 +109,9 @@ require "authentication/adminauth.php";
                                         <th class="text-center">Action</th>
                                     </thead>
                                     <tbody id="tbody-generate-user">
-                                        
+                                        <tr>
+                                            <td colspan="6" class="text-center">no data found</td>
+                                        </tr>
                                     </tbody>
                                 </table>
                             </div>
