--- a/liabilities.html
+++ b/liabilities.html
@@ -58,7 +58,7 @@ require "authentication/userauth.php";
     <ul class="sidebar">
             <li class="side-title">UI Elements</li>
             <li class="side-link">
-                <a class="side-item active" href="user.html"><i class="bi bi-person"></i> User</a>
+                <a class="side-item" href="user.html"><i class="bi bi-person"></i> User</a>
             </li>
             <li class="side-link">
                 <a class="side-item" href="people.html"><i class="bi bi-people"></i> People</a>
@@ -67,7 +67,7 @@ require "authentication/userauth.php";
                 <a class="side-item" href="product.html"><i class="bi bi-box2"></i> Product</a>
             </li>
             <li class="side-link">
-                <a class="side-item active" href="order.html"><i class="bi bi-upc-scan"></i> Order</a>
+                <a class="side-item" href="order.html"><i class="bi bi-upc-scan"></i> Order</a>
             </li>
             <li class="side-link">
                 <a class="side-item" href="statementofaccount.html"><i class="bi bi-journals"></i> Statement of Account</a>
@@ -77,7 +77,7 @@ require "authentication/userauth.php";
                 <a class="side-item" href="expenses.html"><i class="bi bi-graph-up-arrow"></i> Expenses</a>
             </li>
             <li class="side-link">
-                <a class="side-item" href="liabilities.html"><i class="bi bi-credit-card"></i> Liabilities</a>
+                <a class="side-item active" href="liabilities.html"><i class="bi bi-credit-card"></i> Liabilities</a>
             </li>
             <li class="side-link">
                 <a class="side-item" href="inventory.html"><i class="bi bi-bar-chart-line"></i> Inventory</a>
@@ -142,6 +142,9 @@ require "authentication/userauth.php";
                                         <th>Terms</th>
                                     </thead>
                                     <tbody id="tbody-customer">
+                                        <tr>
+                                            <td colspan="6" class="text-center">no data found</td>
+                                        </tr>
                                         <tr>
                                             <table class="table table-bordered">
                                                 <tr class="table-active">
