--- a/settings.html
+++ b/settings.html
@@ -58,7 +58,7 @@ require "authentication/adminauth.php";
     <ul class="sidebar">
             <li class="side-title">UI Elements</li>
             <li class="side-link">
-                <a class="side-item active" href="user.html"><i class="bi bi-person"></i> User</a>
+                <a class="side-item" href="user.html"><i class="bi bi-person"></i> User</a>
             </li>
             <li class="side-link">
                 <a class="side-item" href="people.html"><i class="bi bi-people"></i> People</a>
@@ -67,7 +67,7 @@ require "authentication/adminauth.php";
                 <a class="side-item" href="product.html"><i class="bi bi-box2"></i> Product</a>
             </li>
             <li class="side-link">
-                <a class="side-item active" href="order.html"><i class="bi bi-upc-scan"></i> Order</a>
+                <a class="side-item" href="order.html"><i class="bi bi-upc-scan"></i> Order</a>
             </li>
             <li class="side-link">
                 <a class="side-item" href="statementofaccount.html"><i class="bi bi-journals"></i> Statement of Account</a>
