Some files changes

--- a/people.html
+++ b/people.html
@@ -36,7 +36,7 @@ require "authentication/adminauth.php";
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
                         <li class="dropdown-header text-uppercase">Accounts</li>
                         <li class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="logout.html"><i class="bi bi-box-arrow-right"></i> Log Out</a></li>
+                        <li><a class="dropdown-item" href="index.html"><i class="bi bi-box-arrow-right"></i> Log Out</a></li>
                     </ul>
                 </li>
             </ul>
@@ -49,7 +49,7 @@ require "authentication/adminauth.php";
                 <ul class="dropdown-menu dropdown-menu-lg dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
                     <li class="dropdown-header">Accounts</li>
                     <li class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="logout.html"><i class="bi bi-box-arrow-right"></i> Log Out</a></li>
+                    <li><a class="dropdown-item" href="index.html"><i class="bi bi-box-arrow-right"></i> Log Out</a></li>
                 </ul>
             </li>
         </div>
@@ -119,7 +119,13 @@ require "authentication/adminauth.php";
                                         </thead>
                                         <tbody id="tbody-people">
                                             <tr>
-                                                <td colspan="9" class="text-center">no data found ...</td>
+                                                <td>Junjie Morales</td>
+                                                <td>09317037967</td>
+                                                <td>act.jmorales@gmail.com</td>
+                                                <td>Cebu Philippines</td>
+                                                <td>July 08, 1996</td>
+                                                <td>Manager</td>
+                                                <td>view</td>
                                             </tr>
                                         </tbody>
                                     </table>
