--- a/product.html
+++ b/product.html
@@ -36,7 +36,7 @@ require "authentication/adminauth.php";
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
                         <li class="dropdown-header text-uppercase">Accounts</li>
                         <li class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="logout.html"><i class="bi bi-box-arrow-right"></i> Log Out</a></li>
+                        <li><a class="dropdown-item" href="index.html"><i class="bi bi-box-arrow-right"></i> Log Out</a></li>
                     </ul>
                 </li>
             </ul>
@@ -49,7 +49,7 @@ require "authentication/adminauth.php";
                 <ul class="dropdown-menu dropdown-menu-lg dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
                     <li class="dropdown-header">Accounts</li>
                     <li class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="logout.html"><i class="bi bi-box-arrow-right"></i> Log Out</a></li>
+                    <li><a class="dropdown-item" href="index.html"><i class="bi bi-box-arrow-right"></i> Log Out</a></li>
                 </ul>
             </li>
         </div>
@@ -154,7 +154,40 @@ require "authentication/adminauth.php";
                                     </thead>
                                     <tbody id="tbody-product">
                                         <tr>
-                                            <td colspan="5">no data found ...</td>
+                                            <td>Pork BBQ</td>
+                                            <td>15</td>
+                                            <td>BBQ Grilled</td>
+                                            <td>Active</td>
+                                            <td>
+                                                <div class='btn-group' role='group'>
+                                                    <button class='btn btn-warning btn-sm' id='btn-edit-product' data-id="+data[i].id+"><i class='bi bi-pencil-square'></i></button>
+                                                    <button class='btn btn-danger btn-sm' id='btn-delete-product' data-id="+data[i].id+"><i class='bi bi-trash3'></i></button>
+                                                </div>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>Chicken Wings</td>
+                                            <td>40</td>
+                                            <td>BBQ Grilled</td>
+                                            <td>Active</td>
+                                            <td>
+                                                <div class='btn-group' role='group'>
+                                                    <button class='btn btn-warning btn-sm' id='btn-edit-product' data-id="+data[i].id+"><i class='bi bi-pencil-square'></i></button>
+                                                    <button class='btn btn-danger btn-sm' id='btn-delete-product' data-id="+data[i].id+"><i class='bi bi-trash3'></i></button>
+                                                </div>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td>Chicken Thigh</td>
+                                            <td>60</td>
+                                            <td>BBQ Grilled</td>
+                                            <td>Active</td>
+                                            <td>
+                                                <div class='btn-group' role='group'>
+                                                    <button class='btn btn-warning btn-sm' id='btn-edit-product' data-id="+data[i].id+"><i class='bi bi-pencil-square'></i></button>
+                                                    <button class='btn btn-danger btn-sm' id='btn-delete-product' data-id="+data[i].id+"><i class='bi bi-trash3'></i></button>
+                                                </div>
+                                            </td>
                                         </tr>
                                     </tbody>
                                 </table>
