--- a/settings.html
+++ b/settings.html
@@ -36,7 +36,7 @@ require "authentication/adminauth.php";
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
                         <li class="dropdown-header text-uppercase">Accounts</li>
                         <li class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="logout.html"><i class="bi bi-box-arrow-right"></i> Log Out</a></li>
+                        <li><a class="dropdown-item" href="index.html"><i class="bi bi-box-arrow-right"></i> Log Out</a></li>
                     </ul>
                 </li>
             </ul>
@@ -49,7 +49,7 @@ require "authentication/adminauth.php";
                 <ul class="dropdown-menu dropdown-menu-lg dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
                     <li class="dropdown-header">Accounts</li>
                     <li class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="logout.html"><i class="bi bi-box-arrow-right"></i> Log Out</a></li>
+                    <li><a class="dropdown-item" href="index.html"><i class="bi bi-box-arrow-right"></i> Log Out</a></li>
                 </ul>
             </li>
         </div>
@@ -98,22 +98,22 @@ require "authentication/adminauth.php";
                 <div class="col-sm-12 col-lg-12">
                     <div class="card mb-2">
                         <div class="card-body">
-                            <a href="settings-product.php"><h4 class="fw-bold text-uppercase text-muted">product</h4></a>
+                            <a href="settings-product.html"><h4 class="fw-bold text-uppercase text-muted">product</h4></a>
                         </div>
                     </div>
                     <div class="card mb-2">
                         <div class="card-body">
-                            <a href="settings-people.php"><h4 class="fw-bold text-uppercase text-muted">people</h4></a>
+                            <a href="settings-people.html"><h4 class="fw-bold text-uppercase text-muted">people</h4></a>
                         </div>
                     </div>
                     <div class="card mb-2">
                         <div class="card-body">
-                            <a href="settings-expenses.php"><h4 class="fw-bold text-uppercase text-muted">expenses</h4></a>
+                            <a href="settings-expenses.html"><h4 class="fw-bold text-uppercase text-muted">expenses</h4></a>
                         </div>
                     </div>
                     <div class="card mb-2">
                         <div class="card-body">
-                            <a href="settings-liabilities.php"><h4 class="fw-bold text-uppercase text-muted">liabilities</h4></a>
+                            <a href="settings-liabilities.html"><h4 class="fw-bold text-uppercase text-muted">liabilities</h4></a>
                         </div>
                     </div>
                 </div>
