--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
                         </form>
                         <div class="row">
                             <div class="d-grid gap-2 mb-3">
-                                <button type="submit" class="btn btn-primary" id="btn-login"><a href="user.html"> Login</a></button>
+                                <a href="user.html" class="btn btn-primary"> Login</a>
+                                <!-- <button type="submit" class="btn btn-primary" id="btn-login">Login</button> -->
                                 <button class="btn btn-primary" type="button" id="btn-login-loading" disabled>
                                   <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
                                   Loading...
