--- a/inventory.html
+++ b/inventory.html
@@ -36,7 +36,7 @@ require "authentication/adminauth.php";
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
                         <li class="dropdown-header text-uppercase">Accounts</li>
                         <li class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="logout.html"><i class="bi bi-box-arrow-right"></i> Log Out</a></li>
+                        <li><a class="dropdown-item" href="index.html"><i class="bi bi-box-arrow-right"></i> Log Out</a></li>
                     </ul>
                 </li>
             </ul>
@@ -49,7 +49,7 @@ require "authentication/adminauth.php";
                 <ul class="dropdown-menu dropdown-menu-lg dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
                     <li class="dropdown-header">Accounts</li>
                     <li class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="logout.html"><i class="bi bi-box-arrow-right"></i> Log Out</a></li>
+                    <li><a class="dropdown-item" href="index.html"><i class="bi bi-box-arrow-right"></i> Log Out</a></li>
                 </ul>
             </li>
         </div>
