--- a/settings-people.html
+++ b/settings-people.html
@@ -36,7 +36,7 @@ require "authentication/adminauth.php";
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
                         <li class="dropdown-header text-uppercase">Accounts</li>
                         <li class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="logout.html"><i class="bi bi-box-arrow-right"></i> Log Out</a></li>
+                        <li><a class="dropdown-item" href="index.html"><i class="bi bi-box-arrow-right"></i> Log Out</a></li>
                     </ul>
                 </li>
             </ul>
@@ -49,7 +49,7 @@ require "authentication/adminauth.php";
                 <ul class="dropdown-menu dropdown-menu-lg dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
                     <li class="dropdown-header">Accounts</li>
                     <li class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="logout.html"><i class="bi bi-box-arrow-right"></i> Log Out</a></li>
+                    <li><a class="dropdown-item" href="index.html"><i class="bi bi-box-arrow-right"></i> Log Out</a></li>
                 </ul>
             </li>
         </div>
@@ -99,7 +99,7 @@ require "authentication/adminauth.php";
                     <div class="card">
                         <div class="card-body">
                             <h4 class="fw-bold text-uppercase m-auto"><span class="text-muted">people</span> list</h4>
-                            <p>Back to <a href="settings.php">Settings</a></p>
+                            <p>Back to <a href="settings.html">Settings</a></p>
                         </div>
                     </div>
                 </div>
