--- a/statementofaccount.html
+++ b/statementofaccount.html
@@ -36,7 +36,7 @@ require "authentication/adminauth.php";
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
                         <li class="dropdown-header text-uppercase">Accounts</li>
                         <li class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="logout.html"><i class="bi bi-box-arrow-right"></i> Log Out</a></li>
+                        <li><a class="dropdown-item" href="index.html"><i class="bi bi-box-arrow-right"></i> Log Out</a></li>
                     </ul>
                 </li>
             </ul>
@@ -49,7 +49,7 @@ require "authentication/adminauth.php";
                 <ul class="dropdown-menu dropdown-menu-lg dropdown-menu-end" aria-labelledby="navbarDropdownMenuLink">
                     <li class="dropdown-header">Accounts</li>
                     <li class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="logout.html"><i class="bi bi-box-arrow-right"></i> Log Out</a></li>
+                    <li><a class="dropdown-item" href="index.html"><i class="bi bi-box-arrow-right"></i> Log Out</a></li>
                 </ul>
             </li>
         </div>
@@ -115,7 +115,15 @@ require "authentication/adminauth.php";
                                     </thead>
                                     <tbody id="tbody-account">
                                         <tr>
-                                            <td colspan="9" class="text-center">no data found</td>
+                                            <td>00-01</td>
+                                            <td>Pork BBQ</td>
+                                            <td>15</td>
+                                            <td>4</td>
+                                            <td>60</td>
+                                            <td>customer</td>
+                                            <td>admin</td>
+                                            <td>cash</td>
+                                            <td></td>
                                         </tr>
                                     </tbody>
                                 </table>
