--- a/product.html
+++ b/product.html
@@ -158,7 +158,7 @@ require "authentication/adminauth.php";
                                             <td>15</td>
                                             <td>BBQ Grilled</td>
                                             <td>Active</td>
-                                            <td>
+                                            <td class="text-center">
                                                 <div class='btn-group' role='group'>
                                                     <button class='btn btn-warning btn-sm' id='btn-edit-product' data-id="+data[i].id+"><i class='bi bi-pencil-square'></i></button>
                                                     <button class='btn btn-danger btn-sm' id='btn-delete-product' data-id="+data[i].id+"><i class='bi bi-trash3'></i></button>
@@ -170,7 +170,7 @@ require "authentication/adminauth.php";
                                             <td>40</td>
                                             <td>BBQ Grilled</td>
                                             <td>Active</td>
-                                            <td>
+                                            <td class="text-center">
                                                 <div class='btn-group' role='group'>
                                                     <button class='btn btn-warning btn-sm' id='btn-edit-product' data-id="+data[i].id+"><i class='bi bi-pencil-square'></i></button>
                                                     <button class='btn btn-danger btn-sm' id='btn-delete-product' data-id="+data[i].id+"><i class='bi bi-trash3'></i></button>
@@ -182,7 +182,7 @@ require "authentication/adminauth.php";
                                             <td>60</td>
                                             <td>BBQ Grilled</td>
                                             <td>Active</td>
-                                            <td>
+                                            <td class="text-center">
                                                 <div class='btn-group' role='group'>
                                                     <button class='btn btn-warning btn-sm' id='btn-edit-product' data-id="+data[i].id+"><i class='bi bi-pencil-square'></i></button>
                                                     <button class='btn btn-danger btn-sm' id='btn-delete-product' data-id="+data[i].id+"><i class='bi bi-trash3'></i></button>
